add: actionsがdevブランチ変化で自動実行するように追記

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,6 +2,12 @@ name: Deploy Docusaurus to GitHub Pages
 
 on:
   workflow_dispatch:
+  push:
+    branches:
+      - dev
+    paths-ignore:
+      - 'build/**'
+      - '.github/workflows/**'
 
 permissions:
   contents: read
